--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
-title:             Clean Blog
-email:             your-email@example.com
-description:       A Blog Theme by Start Bootstrap
-author:            Start Bootstrap
-baseurl:           "/startbootstrap-clean-blog-jekyll"
-url:               "http://blackrockdigital.github.io"
+title:             Shirin Mojarad
+email:             shirin.mojarad@example.com
+description:       A Machine Learning Blog
+author:            Shirin Mojarad
+baseurl:           "/"
+url:               "http://shirinmojarad.github.io"
 
 # Social Profiles
 twitter_username:  SBootstrap
