--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:             shirin.mojarad@example.com
 description:       A Machine Learning Blog
 author:            Shirin Mojarad
 baseurl:           "/"
-url:               "http://shirinmojarad.github.io"
+url:               "http://shirinn.github.io"
 
 # Social Profiles
 twitter_username:  SBootstrap
